core_os/memory/last_error.txt
  File "main.py", line 1002
    return res[0] if res else None.
                                   ^
SyntaxError: invalid syntax
